--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,24 @@
-/* Write your CSS here */
+.dark-theme {
+  background-color: #000000;
+  color: #ffffff;
+}
+.light {
+  background-color: #ffffff;
+}
+
+.not-found-container {
+  height: 100vh;
+  font-family: 'Roboto';
+}
+
+.not-found-card {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.not-found-image {
+  width: 30%;
+}
